<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tinggi"
        android:layout_marginBottom="4dp"
        android:id="@+id/et_tinggi"
        android:inputType="numberDecimal"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/panjang"
        android:layout_marginBottom="4dp"
        android:id="@+id/et_panjang"
        android:inputType="numberDecimal"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lebar"
        android:layout_marginBottom="4dp"
        android:id="@+id/et_lebar"
        android:inputType="numberDecimal"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btn_save"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/btn_htg_volume"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permukaan"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/btn_luas_permukaan"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keliling"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/btn_htg_keliling"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/hasil"
        android:textStyle="bold"
        android:id="@+id/tv_hasil"
        />



</LinearLayout>